fix left column overflow

--- a/static/css/newstyle.css
+++ b/static/css/newstyle.css
@@ -1,216 +1,3 @@
-/* html {
-    box-sizing: border-box;
-  }
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-
-* {
-    color: white;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Roboto';
-    display: flex;
-    margin: 0;
-    padding: 0;
-    align-items: stretch;
-    font-style: normal;
-    font-weight: 400;
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-}
-
-h1.logo-item {
-    color: var(--text, #FFF);
-    text-align: center;
-    line-height: normal;
-    margin-left: 16px;
-}
-
-.logo-container {
-    margin-top: 28px;
-    display: flex;
-    align-items: center;
-    flex-shrink: 0;
-    flex: 0 0 auto;
-}
-
-ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex: 1;
-}
-
-ul, .logo-container {
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-#circle-logo {
-    fill: var(--text, #FFF);
-    width: 64px;
-    height: 64px;
-    flex-shrink: 0;
-}
-
-#java-nose-logo {
-    width: 37.266px;
-    height: 50.753px;
-    flex-shrink: 0;
-}
-
-.logo-image {
-    width: 64px;
-    height: 64px;
-    flex-shrink: 0; 
-}
-
-.logo-item {
-    flex: 0;
-}
-
-.ul-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.panel-left {
-    align-items: stretch;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(17, 17, 17);
-    flex: 1;
-    z-index: 1;
-}
-
-.panel-right {
-    border: 2px soled red;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--accent, #1759B0);
-    flex: 0 0 45%;
-}
-
-#github-logo img {
-    width: 64px;
-    height: 64px;
-    flex-shrink: 0;
-}
-
-#github-logo {
-    margin-top: 35px;
-    margin-right: 50px;
-    align-items: flex-end;
-    width: 64px;
-    height: 64px;
-    text-decoration: none;
-}
-
-#try-it {
-    width: 180px;
-    height: 84px;
-    background-color: #ffaa2f;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    line-height: 84px;
-    color: #171717;
-}
-
-#rest-api {
-    width: 180px;
-    height: 84px;
-    background-color: transparent;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    line-height: 84px;
-    color: #fff;
-    border: 3px solid #fff;
-}
-
-#learn-more {
-    text-decoration: none;
-    color: #fff;
-}
-
-.buttons-container a {
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
-
-
-
-.font-normal {
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-}
-
-li .font-header {
-    color: brown
-}
-
-li {
-    text-decoration: none;
-}
-
-.block {
-    display: block;
-}
-
-.github-container {
-    display: flex;
-    justify-content: flex-end;
-    flex: 0 0 auto;
-}
-
-.buttons-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.color {
-    background: rgba(236, 32, 36, 0.40);
-    top: -32%;
-    padding-top: 44%; 
-    left: -13%;
-    filter: blur(100px);
-}
-
-.color, .color2 {
-    width: 44%;
-    border-radius: 50%;
-    position: absolute;
-    z-index: -1;
-}
-
-.color2 {
-    overflow: hidden;
-    padding-bottom: 44%;
-    background: rgba(12, 138, 199, 0.40);;
-    filter: blur(150px);
-    top: 80%;
-    left: -8%;
-} */
-/* 
-*{
-    overflow-x: hidden;
-    overflow-y:hidden;
-} */
-
 .font-logo {
     font-family: 'Roboto', sans-serif;
     font-size: 75px;
@@ -262,5 +49,5 @@ li {
 .set-bg-img{
     background-position: center;
     background-repeat: no-repeat;
-    
+    background-size: cover;
 }
